# M5StopWatch-UserDemo

./: .gitignore  README.md  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.cpp  phone_notifications.cpp  phone_notifications.h  private_wifi_config.example.h  wifi_time_sync.cpp  wifi_time_sync.h
main/apps/: apps.h
main/apps/app_badge/: app_badge.cpp
main/apps/app_badge/view/: badge.cpp  view.h
main/apps/app_guruguru/: app_guruguru.cpp  app_guruguru.h
main/apps/app_guruguru/view/: view.cpp  view.h
main/apps/app_launcher/: app_launcher.cpp  app_launcher.h
main/apps/app_launcher/view/: view.cpp  view.h
main/apps/app_notifications/: app_notifications.cpp  app_notifications.h
main/apps/app_setup/: app_setup.cpp
main/apps/app_setup/workers/: datetime.cpp  device.cpp  workers.h
main/apps/app_stack_remote/: app_stack_remote.cpp  app_stack_remote.h
main/apps/app_stack_remote/view/: view.cpp  view.h
main/apps/common/arc_top_clock/: arc_top_clock.cpp  arc_top_clock.h
main/apps/common/audio/: audio.cpp
main/assets/: assets.h
main/assets/images/: icon_notify.c  icon_stack_remote.c
main/assets/images/guruguru/: guruguru_avatar_images.c
main/hal/: hal.h  hal_audio.cpp  hal_badge.cpp  hal_rtc.cpp
main/hal/utils/config_ap/assets/: badge_config_ap.html
